format and remove old ai system